# aosc-findupdate

./: Cargo.toml  README.md
docs/: config.md  config.zh-CN.md
src/: cli.rs  filter.rs  main.rs  parser.rs
src/checker/: anitya.rs  git.rs  github.rs  gitlab.rs  gitweb.rs  html.rs  mod.rs
templates/: github.stpl
