[package]
name = "aosc-findupdate"
version = "0.1.0"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
regex = "1.4"
rayon = "1.5"
anyhow = "1.0"
serde = "1.0"
version-compare = "0.0.12"
percent-encoding = "2.1"
kuchiki = "0.8"
nom = "^7"
clap = "2.33"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", rev = "d75c0abd6cf2b5016452b036ddfbd144e6d611ed" }
walkdir = "2.3"
log = "0.4"
env_logger = "0.9"
aho-corasick = "0.7"
owo-colors = "2.0"
sailfish = "0.3"

[profile.release]
lto = true
