[package]
name = "aosc-findupdate"
version = "0.2.1"
authors = ["liushuyu <liushuyu011@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "blocking"] }
regex = "1.8"
rayon = "1.7"
anyhow = "1.0"
serde = "1.0"
version-compare = "0.1"
percent-encoding = "2.2"
winnow = "0.5"
clap = "^4"
abbs-meta-apml = { git = "https://github.com/AOSC-Dev/abbs-meta-rs", rev = "d75c0abd6cf2b5016452b036ddfbd144e6d611ed" }
walkdir = "2.3"
log = "0.4"
env_logger = "0.10"
aho-corasick = "1.0"
owo-colors = "3.5"
sailfish = "0.8"

[profile.release]
lto = true
